src/test/deca/syntax/valid/objet/DeclMethodeSimple.deca
class SOM{
    int somme(int x, int y){
        return x+y;
    }
}
{
    
}