src/test/deca/syntax/invalid/sansObjet/BadIfExpression.deca
{
    if (x<y || <){
        print("Hello 2020");
    }
}